--- a/pillar.example
+++ b/pillar.example
@@ -56,6 +56,7 @@ haproxy:
         - timeout retry 1s
         - hold valid 10s
 
+
   listens:
     stats:
       bind:
@@ -156,3 +157,18 @@ haproxy:
           port: 80
           check: check
           extra: resolvers local_dns resolve-prefer ipv4
+    another_www:
+      mode: tcp
+      balance: source
+      sticktable: "type binary len 32 size 30k expire 30m"
+      acls:
+        - clienthello req_ssl_hello_type 1
+        - serverhello rep_ssl_hello_type 2
+      tcprequests:
+        - "inspect-delay 5s"
+        - "content accept if clienthello"
+      tcpresponses:
+        - "content accept if serverhello"
+      stickons:
+        - "payload_lv(43,1) if clienthello"
+      options: "ssl-hello-chk"
