adds support for log-format configuration in frontend, listen and defaults

--- a/pillar.example
+++ b/pillar.example
@@ -39,6 +39,7 @@ haproxy:
       - dontlognull
       - forwardfor
       - http-server-close
+    logformat: "%ci:%cp\\ [%t]\\ %ft\\ %b/%s\\ %Tq/%Tw/%Tc/%Tr/%Tt\\ %ST\\ %B\\ %CC\\ %CS\\ %tsc\\ %ac/%fc/%bc/%sc/%rc\\ %sq/%bq\\ %hr\\ %hs\\ %{+Q}r"
     timeouts:
       - http-request    10s
       - queue           1m
@@ -114,6 +115,7 @@ haproxy:
 
     www-https:
       bind: "*:443 ssl crt /etc/ssl/private/certificate-chain-and-key-combined.pem"
+      logformat: "%ci:%cp\\ [%t]\\ %ft\\ %b/%s\\ %Tq/%Tw/%Tc/%Tr/%Tt\\ %ST\\ %B\\ %CC\\ %CS\\ %tsc\\ %ac/%fc/%bc/%sc/%rc\\ %sq/%bq\\ %hr\\ %hs\\ %{+Q}r\\ ssl_version:%sslv\\ ssl_cipher:%sslc"
       reqadd:
         - "X-Forwarded-Proto:\\ https"
       default_backend: www-backend
