--- a/pillar.example
+++ b/pillar.example
@@ -103,6 +103,8 @@ haproxy:
           host: web2.example.com
           port: 18888
           check: check
+        web3:
+          host: web3.example.com
 
   frontends:
     frontend1:
@@ -163,6 +165,8 @@ haproxy:
           host: 123.156.189.111
           port: 8080
           check: check
+        another-server:
+          host: 123.156.189.112
     api-backend:
       options:
         - http-server-close
