--- a/pillar.example
+++ b/pillar.example
@@ -6,6 +6,9 @@ haproxy:
   enabled: True
   config_file_path: /etc/haproxy/haproxy.cfg
   global:
+    log:
+      - 127.0.0.1 local2
+      - 127.0.0.1 local1 notice
     stats:
       enable: True
       socketpath: /var/lib/haproxy/stats
