--- a/pillar.example
+++ b/pillar.example
@@ -10,6 +10,7 @@ haproxy:
     stats:
       enable: True
       socketpath: /var/lib/haproxy/stats
+      mode: 660
       level: admin
     ssl-default-bind-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384"
     ssl-default-bind-options: "no-sslv3 no-tlsv10 no-tlsv11"
