--- a/kitchen.yml
+++ b/kitchen.yml
@@ -14,113 +14,119 @@ platforms:
   ## SALT `master`
   - name: debian-10-master-py3
     driver:
-      image: netmanagers/salt-master-py3:debian-10
+      image: saltimages/salt-master-py3:debian-10
+  - name: ubuntu-2004-master-py3
+    driver:
+      image: saltimages/salt-master-py3:ubuntu-20.04
   - name: ubuntu-1804-master-py3
     driver:
-      image: netmanagers/salt-master-py3:ubuntu-18.04
+      image: saltimages/salt-master-py3:ubuntu-18.04
   - name: centos-8-master-py3
     driver:
-      image: netmanagers/salt-master-py3:centos-8
+      image: saltimages/salt-master-py3:centos-8
+  - name: fedora-32-master-py3
+    driver:
+      image: saltimages/salt-master-py3:fedora-32
   - name: fedora-31-master-py3
     driver:
-      image: netmanagers/salt-master-py3:fedora-31
-  - name: opensuse-leap-151-master-py3
+      image: saltimages/salt-master-py3:fedora-31
+  - name: opensuse-leap-152-master-py3
     driver:
-      image: netmanagers/salt-master-py3:opensuse-leap-15.1
+      image: saltimages/salt-master-py3:opensuse-leap-15.2
       run_command: /usr/lib/systemd/systemd
-    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.2`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
       max_ssh_sessions: 1
   - name: amazonlinux-2-master-py3
     driver:
-      image: netmanagers/salt-master-py3:amazonlinux-2
+      image: saltimages/salt-master-py3:amazonlinux-2
 
   ## SALT `3000.3`
   - name: debian-10-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:debian-10
+      image: saltimages/salt-3000.3-py3:debian-10
   - name: debian-9-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:debian-9
+      image: saltimages/salt-3000.3-py3:debian-9
   - name: ubuntu-1804-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:ubuntu-18.04
+      image: saltimages/salt-3000.3-py3:ubuntu-18.04
   - name: centos-8-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:centos-8
+      image: saltimages/salt-3000.3-py3:centos-8
   - name: centos-7-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:centos-7
+      image: saltimages/salt-3000.3-py3:centos-7
   - name: fedora-31-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:fedora-31
-  - name: opensuse-leap-151-3000-3-py3
+      image: saltimages/salt-3000.3-py3:fedora-31
+  - name: opensuse-leap-152-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:opensuse-leap-15.1
+      image: saltimages/salt-3000.3-py3:opensuse-leap-15.2
       run_command: /usr/lib/systemd/systemd
-    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.2`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
       max_ssh_sessions: 1
   - name: amazonlinux-2-3000-3-py3
     driver:
-      image: netmanagers/salt-3000.3-py3:amazonlinux-2
+      image: saltimages/salt-3000.3-py3:amazonlinux-2
   - name: ubuntu-1804-3000-3-py2
     driver:
-      image: netmanagers/salt-3000.3-py2:ubuntu-18.04
+      image: saltimages/salt-3000.3-py2:ubuntu-18.04
   - name: ubuntu-1604-3000-3-py2
     driver:
-      image: netmanagers/salt-3000.3-py2:ubuntu-16.04
+      image: saltimages/salt-3000.3-py2:ubuntu-16.04
   - name: arch-base-latest-3000-3-py2
     driver:
-      image: netmanagers/salt-3000.3-py2:arch-base-latest
+      image: saltimages/salt-3000.3-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
 
   ## SALT `2019.2`
   - name: debian-10-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:debian-10
+      image: saltimages/salt-2019.2-py3:debian-10
   - name: debian-9-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:debian-9
+      image: saltimages/salt-2019.2-py3:debian-9
   - name: ubuntu-1804-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:ubuntu-18.04
+      image: saltimages/salt-2019.2-py3:ubuntu-18.04
   - name: ubuntu-1604-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:ubuntu-16.04
+      image: saltimages/salt-2019.2-py3:ubuntu-16.04
   - name: centos-8-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:centos-8
+      image: saltimages/salt-2019.2-py3:centos-8
   - name: centos-7-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:centos-7
+      image: saltimages/salt-2019.2-py3:centos-7
   - name: fedora-31-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:fedora-31
-  - name: opensuse-leap-151-2019-2-py3
+      image: saltimages/salt-2019.2-py3:fedora-31
+  - name: opensuse-leap-152-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:opensuse-leap-15.1
+      image: saltimages/salt-2019.2-py3:opensuse-leap-15.2
       run_command: /usr/lib/systemd/systemd
-    # Workaround to avoid intermittent failures on `opensuse-leap-15.1`:
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.2`:
     # => SCP did not finish successfully (255):  (Net::SCP::Error)
     transport:
       max_ssh_sessions: 1
   - name: amazonlinux-2-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:amazonlinux-2
+      image: saltimages/salt-2019.2-py3:amazonlinux-2
   - name: centos-6-2019-2-py2
     driver:
-      image: netmanagers/salt-2019.2-py2:centos-6
+      image: saltimages/salt-2019.2-py2:centos-6
       run_command: /sbin/init
   - name: amazonlinux-1-2019-2-py2
     driver:
-      image: netmanagers/salt-2019.2-py2:amazonlinux-1
+      image: saltimages/salt-2019.2-py2:amazonlinux-1
       run_command: /sbin/init
   - name: arch-base-latest-2019-2-py2
     driver:
-      image: netmanagers/salt-2019.2-py2:arch-base-latest
+      image: saltimages/salt-2019.2-py2:arch-base-latest
       run_command: /usr/lib/systemd/systemd
 
 provisioner:
@@ -132,9 +138,6 @@ provisioner:
   salt_copy_filter:
     - .kitchen
     - .git
-  dependencies:
-    - name: hosts
-      path: ./test/salt/salt
 
 verifier:
   # https://www.inspec.io/
@@ -146,8 +149,6 @@ verifier:
 
 suites:
   - name: default
-    excludes:
-      - centos-6-2018-3-py2
     provisioner:
       state_top:
         base:
@@ -162,25 +163,10 @@ suites:
               - haproxy
       pillars_from_files:
         haproxy.sls: pillar.example
-        hosts.sls: ./test/salt/pillar/hosts.sls
-    verifier:
-      inspec_tests:
-        - path: test/integration/default
-  - name: centos6
-    includes:
-      - centos-6-2018-3-py2
-    provisioner:
-      state_top:
-        base:
-          '*':
-            - haproxy
-      pillars:
-        top.sls:
-          base:
-            '*':
-              - haproxy
-      pillars_from_files:
-        haproxy.sls: test/salt/pillar/centos6.sls
+        hosts.sls: test/salt/pillar/hosts.sls
+      dependencies:
+        - name: hosts
+          path: ./test/salt/salt
     verifier:
       inspec_tests:
         - path: test/integration/default
