test: standardise use of `share` suite & `_mapdata` state [skip ci]
* Automated using https://github.com/myii/ssf-formula/pull/302

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -315,6 +315,7 @@ suites:
       state_top:
         base:
           '*':
+            - haproxy._mapdata
             - hosts
             - haproxy
       pillars:
