--- a/pillar.example
+++ b/pillar.example
@@ -24,14 +24,19 @@ haproxy:
     log-tag: haproxy
     # Optional log-send-hostname parameter, sets the hostname field in the syslog header
     log-send-hostname: localhost
+    # stats sockets
     stats:
-      enable: true
-      socketpath: /var/lib/haproxy/stats
-      mode: 660
-      level: admin
-      # yamllint disable-line rule:line-length
-      # Optional extra bind parameter, for example to set the owner/group on the socket file
-      extra: user haproxy group haproxy
+      /run/haproxy/stats-ro:
+        # the defaults
+        level: user
+        mode: 600
+        user: haproxy
+        group: haproxy
+      /run/haproxy/stats-rw:
+        # custom example
+        level: admin
+        mode: 660
+        group: sysadmins
     # yamllint disable-line rule:line-length
     ssl-default-bind-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384"
     ssl-default-bind-options: "no-sslv3 no-tlsv10 no-tlsv11"
