--- a/pillar.example
+++ b/pillar.example
@@ -37,6 +37,7 @@ haproxy:
         level: admin
         mode: 660
         group: sysadmins
+        expose-fd listeners: true
     # yamllint disable-line rule:line-length
     ssl-default-bind-ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384"
     ssl-default-bind-options: "no-sslv3 no-tlsv10 no-tlsv11"
